javassist agent bootstrap